# mohair-experiments

./: .gitattributes  .gitignore  README.md  meson.build  pyproject.toml
resources/data/: testdb
resources/data/source/: cells.tsv  genes.tsv
resources/data/source/clusters/: E-GEOD-100618_0_124.cells.tsv  E-GEOD-100618_1_86.cells.tsv  E-GEOD-100618_2_84.cells.tsv  E-GEOD-100618_3_63.cells.tsv  E-GEOD-100618_4_58.cells.tsv  E-GEOD-106540_0_770.cells.tsv  E-GEOD-106540_1_488.cells.tsv  E-GEOD-106540_2_378.cells.tsv  E-GEOD-106540_3_322.cells.tsv  E-GEOD-106540_4_227.cells.tsv  E-GEOD-106540_5_59.cells.tsv  E-GEOD-76312_0_543.cells.tsv  E-GEOD-76312_1_417.cells.tsv  E-GEOD-76312_2_344.cells.tsv  E-GEOD-76312_3_254.cells.tsv  E-GEOD-76312_4_171.cells.tsv  E-GEOD-76312_5_143.cells.tsv  E-GEOD-76312_6_136.cells.tsv  E-GEOD-76312_7_73.cells.tsv  E-GEOD-76312_8_70.cells.tsv
resources/data/source/expr/: E-GEOD-100618.tsv  E-GEOD-106540.tsv  E-GEOD-76312.tsv
resources/examples/: query.duckdb.substrait  query.plan.txt  test-query.substrait  test-query.txt
resources/scripts/duckdb-sql/: create-schema.array.sql  create-schema.sql  create-substrait.sql  exec-substrait.sql  explain-substrait.sql  load-cells-genes.sql  load-clustermembers.sql  load-clusters.sql  load-data.sql  load-expression.sql  load-metaclusters.sql  load-test.sql  setup-db.duckdb  test-query.sql
src/cpp/toolbox/: create-substrait.cpp  exec-substrait.cpp  explain-substrait.cpp
toolbox/: read-substrait  write-substrait
